# Grim-Dawn-Resistance-Optimizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
data/: augment_data.csv  component_data.csv
grim_dawn_resistance_optimizer/: components.py  resistance_component_augment_lp_solver.py  resistance_component_augment_lp_solver.py.py  resistance_component_lp_solver.py  resistance_optimizer.py  scraping_component_augment_data.py
src/: resistance_optimizer.py
web/: app.py
web/static/: button_language.css  index.js  styles.css
web/static/js/db/: zh.js
web/static/js/web/: example.js  zh.js
web/templates/: button_language.html  index.html
