[tool.poetry]
name = "gd_db"
version = "0.1.0"
description = ""
authors = ["Himavanth Reddy <himavanth.reddy19@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.12"
selenium = "^4.34.2"
beautifulsoup4 = "^4.13.4"
icecream = "^2.1.5"
pandas = "^2.3.1"
pulp = "^3.2.1"
flask = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
